# linear-snap-gui

./: CAMERA_RECOVERY.md  CameraControl.py  Dendrograph.fbp  LinearSnap.spec  LinearSnapControl.py  LinearSnapFrame.py  Preferences.fbp  Preferences.py  README.md  StandaloneCamera.spec  app.py  config.py  edsdk.py  gui.py  icon.icns  miniMacroControl.py  miniMacroFrame.py  pyproject.toml  requirements.txt  standalone_camera_app.py
.github/workflows/: build.yml
gphoto/: LiveView.entitlements  LiveView.spec  camera-config.py  gui.py  liveview-focus.py  liveview-focus.spec  wait-for-photo.py
